--- a/style.scss
+++ b/style.scss
@@ -62,8 +62,7 @@ article {
   background-color: $bg-nav;
 
   .nav-item {
-    flex: 1;
-    padding: 0.1rem;
+    padding: 0.1rem 0.5rem;
     font-weight: 600;
     font-size: 0.8rem;
   }
