--- a/style.scss
+++ b/style.scss
@@ -3,13 +3,15 @@ $primary-color: #5e5656;
 
 $bg-nav: #f0f0f0a2;
 
-$color-bozze: #73db73;
+$color-bozze: #a0d468;
 $color-more-button: #5c9cff;
 
-$off-color: #ffd95c;
+$off-color: #f6bb43;
 $prc-color: #5c9dff;
 $orc-color: #585858;
 $com-color: #be5cff;
+
+$color-delivery: #da4553;
 
 body {
   font-family: $font-stack;
@@ -17,12 +19,9 @@ body {
 }
 
 small {
-  font-weight: 200;
-  color: $primary-color;
-}
+  // font-weight: bold;
 
-.bolder {
-  font-weight: bolder;
+  color: $primary-color;
 }
 
 .line-through {
@@ -41,14 +40,14 @@ small {
 
 article {
   display: grid;
-  grid-template-columns: 0.5fr 1fr 1fr 1.5fr 1fr;
+  grid-template-columns: min-content auto auto 1fr;
   grid-template-rows: 0.2fr 0.7fr 2fr;
   grid-template-areas:
-    "nav nav nav nav nav"
-    "icon id status delivery price"
-    "icon content content content price";
+    "nav nav nav nav"
+    "icon title delivery price"
+    "icon info info price";
 
-  grid-gap: 0.4rem;
+  grid-gap: 9px 30px;
   border-bottom: 1px solid rgb(223, 223, 223);
   margin: 0.8rem 1rem;
   padding: 0.3rem;
@@ -58,21 +57,28 @@ article {
   grid-area: nav;
   display: flex;
   padding: 0.3rem 0.5rem;
+  padding-left: 45px;
   border-radius: 10px;
+  column-gap: 45px;
   background-color: $bg-nav;
 
   .nav-item {
     padding: 0.1rem 0.5rem;
-    font-weight: 600;
-    font-size: 0.8rem;
+    font-weight: bold;
+    font-size: 12px;
+  }
+
+  small {
+    font-size: 12px;
+    font-weight: 400;
   }
 }
 
 .icon {
   grid-area: icon;
-  padding: 1.2rem;
-  justify-self: center;
-  display: block;
+  display: flex;
+  align-items: flex-start;
+  justify-items: center;
 
   span {
     border-radius: 10px;
@@ -102,42 +108,52 @@ article {
   }
 }
 
-.id {
-  grid-area: id;
-  align-self: center;
-  font-size: 1.3rem;
-  font-weight: 800;
-  display: inline-flex;
+.title {
+  grid-area: title;
+  display: flex;
+  column-gap: 30px;
   align-items: center;
 
-  .id-vl {
-    margin-left: 0.5rem;
-    padding: 0rem 0.5rem;
-    min-height: 1.5rem;
-    border-left: 1px solid $primary-color;
+  .id {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    font-weight: 800;
 
-    span {
-      background-color: $color-bozze;
-      color: white;
-      padding: 0.1rem 1rem;
-      border-radius: 5px;
+    .code {
+      color: black;
+      font-size: 18px;
       font-weight: 500;
-      font-size: 0.9rem;
-      letter-spacing: 2px;
     }
   }
-}
+  .id-vl {
+    align-self: center;
+    margin-left: 12px;
+    margin-right: 15px;
+    height: 21px;
+    border-left: 1px solid $primary-color;
+  }
+  .bozza {
+    background-color: $color-bozze;
+    color: white;
+    padding: 0.1rem 1rem;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 2px;
+  }
 
-.status {
-  grid-area: status;
-  align-self: center;
+  .status {
+    align-self: center;
+    font-size: 12px;
+  }
 }
 
 .delivery {
   grid-area: delivery;
   align-self: center;
-  color: red;
-  font-size: 0.8rem;
+  color: $color-delivery;
+  font-size: 12px;
 }
 
 .price {
@@ -148,20 +164,47 @@ article {
 
   .price-item-1 {
     flex: 1;
+    font-weight: normal;
+    color: #525252;
+    font-size: 15px;
+
+    small {
+      font-size: 11px;
+    }
   }
 
   .price-item-2 {
     flex: 1;
-    font-size: 1.5rem;
+    font-size: 22px;
     color: black;
-    font-weight: 600;
+    font-weight: 500;
+
+    small {
+      font-weight: 400;
+      color: #525252;
+      font-size: 14px;
+    }
   }
 }
 
-.content {
-  grid-area: content;
+.info {
+  grid-area: info;
 
-  .content h4 {
+  .client {
+    margin: 0px;
+    font-weight: bold;
+    font-size: 18px;
+    color: black;
+
+    span {
+      font-size: 12px;
+      font-style: italic;
+      font-weight: 100;
+      color: #525252;
+    }
+  }
+
+  h4 {
     font-weight: lighter;
     color: black;
     font-size: 1.1rem;
@@ -170,9 +213,17 @@ article {
 
 .orders {
   font-size: 0.8rem;
+  margin-top: 9px;
 
-  .orders p {
+  p {
+    font-size: 13px;
     margin: 0px;
+
+    .bold {
+      font-style: italic;
+      font-weight: bold;
+      color: #525252;
+    }
   }
 }
 
@@ -182,17 +233,24 @@ article {
     grid-template-rows: repeat(6, auto);
     grid-template-areas:
       "nav nav"
-      "icon id"
-      "icon status"
+      "icon title"
+      "icon title"
       "delivery delivery"
-      "content content"
+      "info info"
       "price price";
     grid-gap: 0.4rem;
+  }
+
+  .title {
+    display: contents;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   .nav {
     flex-direction: column;
     margin-bottom: 0.5rem;
+    padding-left: 0px;
   }
 
   .icon {
