--- a/style.css
+++ b/style.css
@@ -28,18 +28,18 @@ article {
   grid-template-areas: "nav nav nav nav" "icon title delivery price" "icon info info price";
   grid-gap: 9px 30px;
   border-bottom: 1px solid #dfdfdf;
-  margin: 0.8rem 1rem;
-  padding: 0.3rem;
+  border-top: 1px solid #dfdfdf;
+  margin: 20px;
+  padding-bottom: 9px;
 }
 
 .nav {
   grid-area: nav;
   display: flex;
   padding: 0.3rem 0.5rem;
-  padding-left: 45px;
   border-radius: 10px;
   column-gap: 45px;
-  background-color: #f0f0f0a2;
+  background-color: #fafafa;
 }
 .nav .nav-item {
   padding: 0.1rem 0.5rem;
@@ -60,11 +60,17 @@ article {
 .icon span {
   border-radius: 10px;
   font-weight: 800;
-  padding: 1rem 0.8rem;
+  width: 57px;
+  line-height: 57px;
+  text-align: center;
 }
 .icon .i-off {
   color: #f6bb43;
   border: 4px solid #f6bb43;
+}
+.icon .i-deal {
+  color: #fb6e52;
+  border: 4px solid #fb6e52;
 }
 .icon .i-orc {
   color: #585858;
