--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ small {
   background-color: transparent;
   background-repeat: no-repeat;
   border: none;
-  color: #5c9cff;
+  font-style: italic;
+  color: #4b89dc;
   display: none;
   padding: 0.2rem 0;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 article {
@@ -37,7 +38,6 @@ article {
   grid-area: nav;
   display: flex;
   padding: 0.3rem 0.5rem;
-  border-radius: 10px;
   column-gap: 45px;
   background-color: #fafafa;
 }
@@ -45,6 +45,7 @@ article {
   padding: 0.1rem 0.5rem;
   font-weight: bold;
   font-size: 12px;
+  line-height: 15px;
 }
 .nav small {
   font-size: 12px;
@@ -59,6 +60,7 @@ article {
 }
 .icon span {
   border-radius: 10px;
+  font-size: 16px;
   font-weight: 800;
   width: 57px;
   line-height: 57px;
@@ -84,11 +86,14 @@ article {
   color: #be5cff;
   border: 4px solid #be5cff;
 }
+.icon .i-rfx {
+  color: #4b89dc;
+  border: 4px solid #4b89dc;
+}
 
 .title {
   grid-area: title;
   display: flex;
-  column-gap: 30px;
   align-items: center;
 }
 .title .id {
@@ -101,6 +106,20 @@ article {
   color: black;
   font-size: 18px;
   font-weight: 500;
+}
+.title .v-line {
+  align-self: center;
+  margin-left: 12px;
+  margin-right: 15px;
+  height: 21px;
+  border-left: 1px solid #5e5656;
+}
+.title .v-line-lg {
+  align-self: center;
+  margin-left: 12px;
+  margin-right: 15px;
+  height: 21px;
+  border-left: 1px solid #5e5656;
 }
 .title .id-vl {
   align-self: center;
@@ -117,10 +136,21 @@ article {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 2px;
+  margin-right: 30px;
 }
 .title .status {
   align-self: center;
   font-size: 12px;
+}
+.title .status-bold {
+  font-weight: 600;
+  font-size: 14px;
+}
+.title .status-blue {
+  font-style: oblique;
+  color: #5d9bec;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .delivery {
@@ -193,17 +223,47 @@ article {
 }
 
 @media only screen and (max-width: 660px) {
+  .nav {
+    border-radius: 10px;
+    background-color: #ededed;
+  }
+
   article {
+    border-top: none;
     grid-template-columns: 0.4fr 2fr;
     grid-template-rows: repeat(6, auto);
     grid-template-areas: "nav nav" "icon title" "icon title" "delivery delivery" "info info" "price price";
-    grid-gap: 0.4rem;
+    grid-gap: 0.2rem;
+  }
+
+  .v-line-lg {
+    display: none;
+  }
+
+  .orders p {
+    font-size: 10px;
+  }
+
+  .info .client {
+    font-size: 14px;
+  }
+
+  .delivery {
+    font-size: 11px;
   }
 
   .title {
     display: contents;
     flex-direction: column;
     justify-content: flex-start;
+  }
+  .title .id .code {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .title .status-blue {
+    font-weight: normal;
+    font-size: 10px;
   }
 
   .nav {
@@ -216,6 +276,11 @@ article {
     align-self: center;
     padding: 0px;
   }
+  .icon span {
+    font-size: 10px;
+    width: 37px;
+    line-height: 37px;
+  }
 
   .price {
     flex-direction: row;
@@ -224,12 +289,12 @@ article {
 
   .price-item-1 {
     text-align: left;
-    padding: 0.5rem;
+    align-content: space-between;
   }
 
   .price-item-2 {
-    font-size: 1.2rem;
-    padding: 0.5rem;
+    font-size: 19px;
+    font-weight: 600;
   }
 
   .more-button {
