--- a/style.css
+++ b/style.css
@@ -58,37 +58,55 @@ article {
   align-items: flex-start;
   justify-items: center;
 }
-.icon span {
+.icon div {
   border-radius: 10px;
   font-size: 16px;
   font-weight: 800;
   width: 57px;
-  line-height: 57px;
+  height: 57px;
   text-align: center;
 }
 .icon .i-off {
   color: #f6bb43;
   border: 4px solid #f6bb43;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icon .i-deal {
   color: #fb6e52;
   border: 4px solid #fb6e52;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icon .i-orc {
   color: #585858;
   border: 4px solid #585858;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icon .i-prc {
   color: #5c9dff;
   border: 4px solid #5c9dff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icon .i-com {
   color: #be5cff;
   border: 4px solid #be5cff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icon .i-rfx {
   color: #4b89dc;
   border: 4px solid #4b89dc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
@@ -276,10 +294,10 @@ article {
     align-self: center;
     padding: 0px;
   }
-  .icon span {
+  .icon div {
     font-size: 10px;
-    width: 37px;
-    line-height: 37px;
+    width: 40px;
+    height: 40px;
   }
 
   .price {
