--- a/style.css
+++ b/style.css
@@ -3,8 +3,36 @@ body {
   color: #5e5656;
 }
 
+.dotted-lg {
+  float: left;
+  width: 100%;
+  margin-left: 10px;
+  background-image: linear-gradient(to bottom, #656d78 8px, rgba(255, 255, 255, 0) 0%);
+  background-position: left;
+  background-size: 1px 16px;
+  background-repeat: repeat-y;
+}
+
 small {
   color: #5e5656;
+}
+
+.date {
+  display: flex;
+  column-gap: 10px;
+  margin-left: -5px;
+  font-size: 14px;
+}
+.date .dot-col {
+  display: flex;
+  align-items: center;
+}
+.date .bold {
+  font-weight: bold;
+}
+.date .hr-line {
+  width: 15px;
+  border-top: 1px solid #5e5656;
 }
 
 .line-through {
@@ -70,6 +98,7 @@ article {
   color: #f6bb43;
   border: 4px solid #f6bb43;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -77,6 +106,7 @@ article {
   color: #fb6e52;
   border: 4px solid #fb6e52;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -84,6 +114,7 @@ article {
   color: #585858;
   border: 4px solid #585858;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -91,6 +122,7 @@ article {
   color: #5c9dff;
   border: 4px solid #5c9dff;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -98,6 +130,7 @@ article {
   color: #be5cff;
   border: 4px solid #be5cff;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -105,6 +138,7 @@ article {
   color: #4b89dc;
   border: 4px solid #4b89dc;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -246,6 +280,10 @@ article {
     background-color: #ededed;
   }
 
+  .date {
+    display: none;
+  }
+
   article {
     border-top: none;
     grid-template-columns: 0.4fr 2fr;
@@ -260,6 +298,11 @@ article {
 
   .orders p {
     font-size: 10px;
+  }
+
+  .dotted-lg {
+    background: none;
+    margin: 0px;
   }
 
   .info .client {
