--- a/template2/style.scss
+++ b/template2/style.scss
@@ -2,6 +2,8 @@ $font-stack: "Source Sans Pro", sans-serif;
 $bg-noimage: #e6e9ee;
 $color-noimage: #aab2bd;
 
+$potential-bg: #f6bb43;
+
 body {
   font-family: $font-stack;
 }
@@ -14,6 +16,15 @@ article {
   border-bottom: 1px solid rgb(223, 223, 223);
   margin: 20px;
   padding-bottom: 9px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+.heart-sm {
+  display: none;
 }
 
 .green {
@@ -33,8 +44,28 @@ article {
   }
 }
 
+.potential {
+  .potential-pic {
+    display: block !important;
+  }
+}
+
 .profile-pic {
   grid-area: profile-pic;
+  position: relative;
+
+  .potential-pic {
+    display: none;
+    position: absolute;
+    width: 100%;
+    background-color: $potential-bg;
+    color: white;
+    font-size: 11px;
+    font-weight: 500;
+    text-align: center;
+    border-radius: 4px 4px 0 0;
+    padding: 2px 0;
+  }
 
   .no-image {
     display: flex;
@@ -43,10 +74,24 @@ article {
     font-weight: bold;
     font-size: 18px;
     width: 68px;
-    border-radius: 4px;
     height: 68px;
+    border-radius: 4px;
     color: $color-noimage;
     background-color: $bg-noimage;
+  }
+
+  .image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 68px;
+    height: 68px;
+    border-radius: 4px;
+    border: 1px solid $bg-noimage;
+
+    img {
+      width: 100%;
+    }
   }
 
   .green-border {
@@ -66,6 +111,37 @@ article {
   }
 }
 
+.number {
+  background-color: #e6e9ee;
+  border-color: #656d78;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.number-lg {
+  margin-left: 10px;
+  height: 21px;
+  width: 21px;
+  border: solid 2px;
+  span {
+    padding: 3px;
+    font-size: 11px;
+  }
+}
+
+.number-sm {
+  display: none;
+  height: 17px;
+  width: 17px;
+  border: solid 1px;
+  span {
+    padding: 3px;
+    font-size: 8px;
+  }
+}
+
 .desc {
   grid-area: desc;
   display: flex;
@@ -73,9 +149,18 @@ article {
   line-height: 25px;
 
   .id {
-    font-size: 12px;
-    font-weight: 400;
-    color: #656d78;
+    display: flex;
+    align-items: center;
+
+    span {
+      font-size: 12px;
+      font-weight: 400;
+      color: #656d78;
+    }
+
+    svg {
+      margin-left: 5px;
+    }
   }
 
   .title {
@@ -83,7 +168,20 @@ article {
     font-weight: bold;
     color: #000000;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+
+    .potential-sm {
+      display: none;
+      margin-left: 10px;
+      span {
+        background-color: $potential-bg;
+        color: white;
+        font-size: 8px;
+        font-weight: 500;
+        padding: 3px;
+        border-radius: 3px;
+      }
+    }
 
     svg {
       margin-left: 10px;
@@ -135,7 +233,7 @@ article {
 @media only screen and (max-width: 660px) {
   article {
     display: grid;
-    grid-template-columns: min-content 1fr 0.2fr;
+    grid-template-columns: min-content 1fr 0.1fr;
     grid-template-areas:
       "profile-pic desc none"
       "profile-pic info none";
@@ -143,11 +241,26 @@ article {
     grid-gap: 7px 15px;
   }
 
+  .potential {
+    .potential-sm {
+      display: block !important;
+    }
+  }
+
   .profile-pic {
+    .potential-pic {
+      font-size: 6px;
+      padding: 0px;
+    }
     .no-image {
       width: 34px;
       height: 34px;
       font-size: 12px;
+    }
+
+    .image {
+      width: 34px;
+      height: 34px;
     }
 
     .circle {
@@ -164,7 +277,13 @@ article {
     line-height: 20px;
 
     .id {
-      font-size: 10px;
+      span {
+        font-size: 10px;
+      }
+
+      svg {
+        display: none;
+      }
     }
 
     .title {
@@ -191,5 +310,19 @@ article {
       justify-content: left;
       font-size: 12px;
     }
+  }
+
+  .number-lg {
+    display: none;
+  }
+
+  .number-sm {
+    display: flex;
+    margin-top: 20px;
+  }
+
+  .heart-sm {
+    display: flex;
+    margin-top: 20px;
   }
 }
