--- a/template3/style.css
+++ b/template3/style.css
@@ -8,7 +8,7 @@ header {
   width: 100%;
   height: 41px;
   line-height: 41px;
-  display: inline-grid;
+  display: grid;
   grid-template-columns: auto 1fr;
   grid-template-areas: "logo nav";
   border-bottom: 1px solid #EFF0F3;
@@ -31,10 +31,13 @@ header .logo .message {
   border-radius: 5px;
 }
 header .nav ul {
-  display: flex;
-  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr repeat(4, fit-content(50px));
+  grid-gap: 32px;
+  justify-items: end;
   justify-content: end;
   column-gap: 32px;
+  list-style-type: none;
   margin: 0px;
   padding: 0px;
   padding-right: 20px;
@@ -50,6 +53,317 @@ header .nav ul a svg {
 header .nav ul a span {
   font-size: 12px;
   text-transform: uppercase;
+}
+
+article {
+  display: grid;
+  grid-template-columns: auto min-content auto auto 1fr;
+  grid-template-rows: 0.7fr 1fr;
+  grid-template-areas: "rowback icon title delivery delivery" "rowback icon info info price";
+  grid-gap: 9px 30px;
+  padding: 20px 15px 10px 15px;
+}
+article .back-row {
+  grid-area: rowback;
+  align-self: center;
+}
+article .icon {
+  grid-area: icon;
+  display: flex;
+  align-items: flex-start;
+  justify-items: center;
+}
+article .icon div {
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 800;
+  width: 57px;
+  height: 57px;
+  text-align: center;
+}
+article .icon .i-off {
+  color: #f6bb43;
+  border: 4px solid #f6bb43;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+article .icon .i-deal {
+  color: #fb6e52;
+  border: 4px solid #fb6e52;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+article .icon .i-orc {
+  color: #585858;
+  border: 4px solid #585858;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+article .icon .i-prc {
+  color: #5c9dff;
+  border: 4px solid #5c9dff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+article .icon .i-com {
+  color: #be5cff;
+  border: 4px solid #be5cff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+article .icon .i-rfx {
+  color: #4b89dc;
+  border: 4px solid #4b89dc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+article .title {
+  grid-area: title;
+  display: flex;
+  align-items: center;
+}
+article .title .id {
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+  font-weight: 800;
+}
+article .title .id .code {
+  color: black;
+  font-size: 18px;
+  font-weight: 500;
+}
+article .title .v-line {
+  align-self: center;
+  margin-left: 12px;
+  margin-right: 15px;
+  height: 21px;
+  border-left: 1px solid #5e5656;
+}
+article .title .v-line-lg {
+  align-self: center;
+  margin-left: 12px;
+  margin-right: 15px;
+  height: 21px;
+  border-left: 1px solid #5e5656;
+}
+article .title .id-vl {
+  align-self: center;
+  margin-left: 12px;
+  margin-right: 15px;
+  height: 21px;
+  border-left: 1px solid #5e5656;
+}
+article .title .bozza {
+  background-color: #a0d468;
+  color: white;
+  padding: 0.1rem 1rem;
+  border-radius: 5px;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 2px;
+  margin-right: 30px;
+}
+article .title .status {
+  align-self: center;
+  font-size: 12px;
+}
+article .title .status-bold {
+  font-weight: 600;
+  font-size: 14px;
+}
+article .title .status-blue {
+  font-style: oblique;
+  color: #5d9bec;
+  font-weight: 600;
+  font-size: 14px;
+}
+article .delivery {
+  grid-area: delivery;
+  align-self: center;
+  color: #da4553;
+  font-size: 12px;
+}
+article .price {
+  grid-area: price;
+  display: flex;
+  text-align: right;
+  flex-direction: column;
+  justify-content: end;
+}
+article .price .price-item-1 {
+  flex: 1;
+  font-weight: normal;
+  color: #525252;
+  font-size: 15px;
+}
+article .price .price-item-1 small {
+  font-size: 11px;
+}
+article .price .price-item-2 {
+  font-size: 22px;
+  color: black;
+  font-weight: 500;
+}
+article .price .price-item-2 small {
+  font-weight: 400;
+  color: #525252;
+  font-size: 14px;
+}
+article .info {
+  grid-area: info;
+}
+article .info .client {
+  margin: 0px;
+  font-weight: bold;
+  font-size: 18px;
+  color: black;
+}
+article .info .client span {
+  font-size: 12px;
+  font-style: italic;
+  font-weight: 100;
+  color: #525252;
+}
+article .info h4 {
+  font-weight: lighter;
+  color: black;
+  font-size: 1.1rem;
+}
+article .orders {
+  font-size: 0.8rem;
+  margin-top: 9px;
+}
+article .orders p {
+  font-size: 13px;
+  margin: 0px;
+}
+article .orders p .bold {
+  font-style: italic;
+  font-weight: bold;
+  color: #525252;
+}
+
+.subnav {
+  width: 100%;
+  background-color: #F9F9F9;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0px;
+  padding: 10px 0px;
+}
+.subnav nav.menu-left {
+  padding-left: 20px;
+}
+.subnav nav.menu-left ul {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  justify-items: center;
+  justify-content: start;
+  align-items: center;
+  column-gap: 32px;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+.subnav nav.menu-left ul a {
+  text-decoration: none;
+  color: #000;
+}
+.subnav nav.menu-left ul a svg {
+  display: inline-block;
+  vertical-align: middle;
+}
+.subnav nav.menu-left ul .btn {
+  font-size: 12px;
+  padding: 7px 10px;
+  color: #434A54;
+}
+.subnav nav.menu-left ul .btn svg {
+  margin-right: 5px;
+  stroke: #434A54;
+}
+.subnav nav.menu-left ul .btn span {
+  z-index: 2;
+}
+.subnav nav.menu-left ul .btn .order-rows {
+  font-size: 10px;
+  border-radius: 3px;
+  padding: 2px 3px;
+  border: 0.5px solid #5e5656;
+  margin-left: 10px;
+}
+.subnav nav.menu-left ul .btn-active {
+  position: relative;
+  color: white;
+  background-color: #fb6e52;
+  border-radius: 5px;
+  z-index: 2;
+}
+.subnav nav.menu-left ul .btn-active .order-rows {
+  border-color: #fff;
+}
+.subnav nav.menu-left ul .btn-active svg {
+  stroke: #fff;
+}
+.subnav nav.menu-left ul .btn-active :after {
+  content: "";
+  height: 12px;
+  width: 12px;
+  background-color: #fb6e52;
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  z-index: -1;
+  transform: rotate(-45deg);
+}
+.subnav nav.menu-right {
+  padding-right: 20px;
+}
+.subnav nav.menu-right ul {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 32px;
+  justify-items: center;
+  justify-content: end;
+  align-items: center;
+  column-gap: 32px;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+.subnav nav.menu-right ul a {
+  text-decoration: none;
+  color: #000;
+}
+.subnav nav.menu-right ul a svg {
+  display: inline-block;
+  vertical-align: middle;
+}
+.subnav nav.menu-right ul a span {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+.subnav nav.menu-right ul .btn-checkout {
+  background-color: #f6bb43;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 10px 40px;
+  border-radius: 5px;
 }
 
 .vl {
