--- a/template3/style.css
+++ b/template3/style.css
@@ -5,13 +5,21 @@ body {
 }
 
 header {
+  position: fixed;
   width: 100%;
-  height: 41px;
-  line-height: 41px;
+  background-color: white;
+  z-index: 10;
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-areas: "logo nav";
   border-bottom: 1px solid #EFF0F3;
+}
+header .logo {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 20px;
+  align-items: center;
+  padding: 5px;
 }
 header .logo img {
   padding: 0px 20px;
@@ -29,6 +37,9 @@ header .logo .message {
   color: #FB6E51;
   border: 1px solid #FB6E51;
   border-radius: 5px;
+}
+header .nav {
+  align-self: center;
 }
 header .nav ul {
   display: grid;
@@ -53,6 +64,10 @@ header .nav ul a svg {
 header .nav ul a span {
   font-size: 12px;
   text-transform: uppercase;
+}
+
+.order {
+  padding-top: 41px;
 }
 
 article {
@@ -257,18 +272,22 @@ article .orders p .bold {
 }
 
 .subnav {
+  position: sticky;
+  top: 41px;
+}
+.subnav .nav {
   width: 100%;
-  background-color: #F9F9F9;
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
   grid-gap: 0px;
   padding: 10px 0px;
+  background-color: #F9F9F9;
 }
-.subnav nav.menu-left {
+.subnav .nav nav.subnav-left {
   padding-left: 20px;
 }
-.subnav nav.menu-left ul {
+.subnav .nav nav.subnav-left ul {
   display: grid;
   grid-template-columns: repeat(3, auto);
   justify-items: center;
@@ -279,47 +298,22 @@ article .orders p .bold {
   margin: 0px;
   padding: 0px;
 }
-.subnav nav.menu-left ul a {
+.subnav .nav nav.subnav-left ul a {
   text-decoration: none;
   color: #000;
 }
-.subnav nav.menu-left ul a svg {
+.subnav .nav nav.subnav-left ul a svg {
   display: inline-block;
   vertical-align: middle;
 }
-.subnav nav.menu-left ul .btn {
-  font-size: 12px;
-  padding: 7px 10px;
-  color: #434A54;
-}
-.subnav nav.menu-left ul .btn svg {
-  margin-right: 5px;
-  stroke: #434A54;
-}
-.subnav nav.menu-left ul .btn span {
-  z-index: 2;
-}
-.subnav nav.menu-left ul .btn .order-rows {
-  font-size: 10px;
-  border-radius: 3px;
-  padding: 2px 3px;
-  border: 0.5px solid #5e5656;
-  margin-left: 10px;
-}
-.subnav nav.menu-left ul .btn-active {
+.subnav .nav nav.subnav-left ul .btn-active {
   position: relative;
   color: white;
   background-color: #fb6e52;
   border-radius: 5px;
   z-index: 2;
 }
-.subnav nav.menu-left ul .btn-active .order-rows {
-  border-color: #fff;
-}
-.subnav nav.menu-left ul .btn-active svg {
-  stroke: #fff;
-}
-.subnav nav.menu-left ul .btn-active :after {
+.subnav .nav nav.subnav-left ul .btn-active :after {
   content: "";
   height: 12px;
   width: 12px;
@@ -330,10 +324,16 @@ article .orders p .bold {
   z-index: -1;
   transform: rotate(-45deg);
 }
-.subnav nav.menu-right {
+.subnav .nav nav.subnav-left ul .btn-active .order-rows {
+  border-color: #fff;
+}
+.subnav .nav nav.subnav-left ul .btn-active svg {
+  stroke: #fff;
+}
+.subnav .nav nav.subnav-right {
   padding-right: 20px;
 }
-.subnav nav.menu-right ul {
+.subnav .nav nav.subnav-right ul {
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 32px;
@@ -345,19 +345,19 @@ article .orders p .bold {
   margin: 0px;
   padding: 0px;
 }
-.subnav nav.menu-right ul a {
+.subnav .nav nav.subnav-right ul a {
   text-decoration: none;
   color: #000;
 }
-.subnav nav.menu-right ul a svg {
+.subnav .nav nav.subnav-right ul a svg {
   display: inline-block;
   vertical-align: middle;
 }
-.subnav nav.menu-right ul a span {
+.subnav .nav nav.subnav-right ul a span {
   font-size: 12px;
   text-transform: uppercase;
 }
-.subnav nav.menu-right ul .btn-checkout {
+.subnav .nav nav.subnav-right ul .btn-checkout {
   background-color: #f6bb43;
   color: white;
   font-size: 12px;
@@ -365,13 +365,122 @@ article .orders p .bold {
   padding: 10px 40px;
   border-radius: 5px;
 }
-
-.vl {
+.subnav .subnav-content {
+  border-top: 1px solid #EFF0F3;
+  border-bottom: 1px solid #EFF0F3;
+  background-color: white;
+  padding: 10px 20px;
+}
+.subnav .subnav-content .add-product {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: auto 1fr;
+}
+.subnav .subnav-content .add-product .sf-c {
   align-self: center;
-  margin-left: 12px;
-  margin-right: 15px;
-  height: 5px;
-  border-left: 1px solid #EFF0F3;
+}
+.subnav .subnav-content .add-product .input-group {
+  display: grid;
+  grid-template-columns: 500px auto auto;
+  align-items: center;
+  border: 1px solid #AAB2BD;
+  border-radius: 5px;
+}
+.subnav .subnav-content .add-product .input-group input[type=text] {
+  background: none;
+  height: 30px;
+  font-weight: lighter;
+  padding-left: 15px;
+  font-size: 12px;
+  text-align: left;
+  box-sizing: border-box;
+  border: none;
+}
+.subnav .subnav-content .add-product .input-group select:focus,
+.subnav .subnav-content .add-product .input-group input:focus {
+  outline: none;
+}
+.subnav .subnav-content .add-product .input-group select {
+  height: 30px;
+  font-weight: lighter;
+  font-size: 10px;
+  border: none;
+  color: #707070;
+}
+.subnav .subnav-content .add-product .input-group button {
+  border: none;
+  background-color: #AAB2BD;
+  vertical-align: middle;
+  display: inline-block;
+  justify-self: stretch;
+  align-self: stretch;
+  border-radius: 0px 4px 4px 0px;
+  padding-right: 10px;
+  margin-left: 10px;
+}
+.subnav .subnav-content .order-rows {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.subnav .subnav-content .order-rows .order-filters {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  justify-items: center;
+  justify-content: start;
+  align-items: center;
+  column-gap: 32px;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+.subnav .subnav-content .order-conditions {
+  padding: 10px;
+}
+.subnav .subnav-content .order-conditions .btn span {
+  color: #4b89dc;
+  font-size: 15px;
+  font-weight: lighter;
+  text-transform: uppercase;
+}
+.subnav .subnav-content .order-infos {
+  justify-self: end;
+  color: #000;
+}
+.subnav .subnav-content .order-infos th {
+  font-size: 12px;
+  font-weight: lighter;
+  text-transform: uppercase;
+  padding-left: 50px;
+}
+.subnav .subnav-content .order-infos td {
+  font-size: 22px;
+  font-weight: 600;
+  padding-left: 50px;
+}
+.subnav .subnav-content .order-infos td span {
+  font-size: 17px;
+}
+.subnav .btn {
+  text-decoration: none;
+  font-size: 12px;
+  padding: 7px 10px;
+  color: #434A54;
+}
+.subnav .btn svg {
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 5px;
+  stroke: #434A54;
+}
+.subnav .btn span {
+  z-index: 2;
+}
+.subnav .btn .order-rows {
+  font-size: 10px;
+  border-radius: 3px;
+  padding: 2px 3px;
+  border: 0.5px solid #5e5656;
+  margin-left: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
