--- a/template3/style.scss
+++ b/template3/style.scss
@@ -129,9 +129,9 @@ article {
 
     .icon {
     grid-area: icon;
-    display: flex;
-    align-items: flex-start;
-    justify-items: center;
+    // display: flex;
+    // align-items: flex-start;
+    // justify-items: center;
 
     div {
         border-radius: 10px;
@@ -177,74 +177,77 @@ article {
     }
 
     .title {
-    grid-area: title;
-    display: flex;
-    // column-gap: 30px;
-    align-items: center;
-
-    .id {
-        display: flex;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-gap: 15px;
         align-items: center;
         font-size: 1.3rem;
         font-weight: 800;
 
         .code {
-        color: black;
-        font-size: 18px;
-        font-weight: 500;
+            color: black;
+            font-size: 18px;
+            font-weight: 500;
         }
-    }
 
-    @mixin vertical-line() {
-        align-self: center;
-        margin-left: 12px;
-        margin-right: 15px;
-        height: 21px;
-        border-left: 1px solid $primary-color;
-    }
+        @mixin vertical-line() {
+            align-self: center;
+            margin-left: 12px;
+            margin-right: 15px;
+            height: 21px;
+            border-left: 1px solid $primary-color;
+        }
 
-    .v-line {
-        @include vertical-line();
-    }
+        .v-line {
+            @include vertical-line();
+        }
 
-    .v-line-lg {
-        @include vertical-line();
-    }
+        .v-line-lg {
+            @include vertical-line();
+        }
 
-    .id-vl {
-        align-self: center;
-        margin-left: 12px;
-        margin-right: 15px;
-        height: 21px;
-        border-left: 1px solid $primary-color;
-    }
-    .bozza {
-        background-color: $color-bozze;
-        color: white;
-        padding: 0.1rem 1rem;
-        border-radius: 5px;
-        font-weight: 500;
-        font-size: 14px;
-        letter-spacing: 2px;
-        margin-right: 30px;
-    }
+        .id-vl {
+            align-self: center;
+            margin-left: 12px;
+            margin-right: 15px;
+            height: 21px;
+            border-left: 1px solid $primary-color;
+        }
 
-    .status {
-        align-self: center;
-        font-size: 12px;
-    }
+        .message{
+            border-left: 1px solid $primary-color;
+            padding-left: 12px ;
+        }
 
-    .status-bold {
-        font-weight: 600;
-        font-size: 14px;
-    }
+        .bozza {
+            vertical-align: middle;
+            background-color: $color-bozze;
+            color: white;
+            padding: 0.1rem 1rem;
+            border-radius: 5px;
+            font-weight: 500;
+            font-size: 14px;
+            letter-spacing: 2px;
+            margin-right: 30px;
+        }
 
-    .status-blue {
-        font-style: oblique;
-        color: $color-approvazione;
-        font-weight: 600;
-        font-size: 14px;
-    }
+        .status {
+            font-weight: 500;
+            align-self: center;
+            font-size: 12px;
+        }
+
+        .status-bold {
+            font-weight: 600;
+            font-size: 14px;
+        }
+
+        .status-blue {
+            font-style: oblique;
+            color: $color-approvazione;
+            font-weight: 600;
+            font-size: 14px;
+        }
     }
 
     .delivery {
@@ -256,7 +259,6 @@ article {
 
     .price {
     grid-area: price;
-    display: flex;
     text-align: right;
     flex-direction: column;
     justify-content: end;
